--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container">
         <h1 id="mainName">GEWITTER?!</h1>
+        <label for="cityInput">Stadt:</label>
         <input type="text" id="cityInput" placeholder="Geben Sie eine Stadt ein.">
         <button type="submit" id="weatherButton" onsubmit="getWeather()">Da ist Gewitter?!</button>
         <div id="weatherOutput">
